# os-autoinst

./: .gitignore  .mergify.yml  CMakeLists.txt  Makefile.am  README.asciidoc  autotest.pm  bmwqemu.pm  codecov.yml  cpanfile  cv.pm  develcover.pm  isotovideo  refresh-deps.sh
.github/workflows/: check-dlp.yaml  ci.yml  obs-helper.yaml  openqa_fullstack.yml
.obs/: workflows.yml
OpenQA/: Isotovideo.pm
backend/: baseclass.pm
cmake/: test-targets.cmake
consoles/: VNC.pm
container/os-autoinst_dev/: Dockerfile
doc/: CMakeLists.txt
docker/travis_test/: Dockerfile
lib/: cv.pm
t/: 00-compile-check-all.t  01-test_needle.t  02-test_ocr.t  03-testapi.t  04-check_vars_docu.t  04-testapi-python.t  05-distribution.t  05-pod.t  06-pod-coverage.t  07-commands.t  08-autotest.t  09-lockapi.t  10-terminal.t  10-test-image-conversion-benchmark.t  10-virtio_terminal.t  11-image-ppm.t  12-bmwqemu.t  13-osutils.t  14-isotovideo.t  15-logging.t  16-send_with_fd.t  17-basetest.t  18-backend-qemu.t  18-qemu-options.t  18-qemu.t  19-isotovideo-command-processing.t  20-openqa-benchmark-stopwatch-utils.t  21-needle-downloader.t  22-svirt.t  23-baseclass.t  24-myjsonrpc-debug.t  24-myjsonrpc.t  25-spvm.t  26-serial_screen.t  26-ssh_screen.t  28-signalblocker.t  29-backend-generalhw.t  29-backend-ipmi.t  29-backend-s390x.t  30-mmapi.t  (+8 more)
t/data/tests/: main.pm
t/data/tests/tests/: modify_and_upload_file.pm
t/lib/OpenQA/Test/: Warnings.pm
tools/: cache-deps.sh  container_run_ci  docker_run_ci  install-new-deps-dlp.sh  install-patched-qemu.sh  invoke-tests  tools.sh
